--- a/apps/passport-client/public/index.hbs
+++ b/apps/passport-client/public/index.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link rel="stylesheet" href="{{cssPath}}" />
     <script defer src="/js/index.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
     <div id="root" />
